--- a/src/components/Strategy/index.styl
+++ b/src/components/Strategy/index.styl
@@ -5,4 +5,10 @@
     color: var(--nutui-tabs-titles-item-active-color, var(--nutui-color-primary, #fa2c19))
   .mg-10
     margin: 10px 0 0 0
+  .no-padding-left
+    padding-left: 0 !important
+  
+
+    
+
 
