--- a/src/components/CustomCard/index.styl
+++ b/src/components/CustomCard/index.styl
@@ -6,10 +6,12 @@
     flex-direction: column;
     justify-content: center
     align-items: center
-    width: calc(33.33333% - 15.5px);
-    margin-right: 18px;
+    width: calc(33.33333% - 3.974%);
+    margin-right: 5%;
+    // width: calc(33.33333% - 15.5px);
+    // margin-right: 18px;
     position: relative;
-    border-radius: 8px;
+    border-radius: 4%;
     overflow: hidden;
     margin-bottom: 20px;
     background: #f8f8f8;
